--- a/incl/pages/reserve/reserve.html
+++ b/incl/pages/reserve/reserve.html
@@ -1,46 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Бронирование</title>
-      <link rel="stylesheet" href="../../../assets/css/style.css" />
-      <link rel="stylesheet" href="reserve.css" />
-   </head>
-   <body>
-    <header>
-        <div class="header-container">
-           <div class="header-container__logo">
+
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <title>Бронирование</title>
+   <link rel="stylesheet" href="../../../assets/css/style.css" />
+   <link rel="stylesheet" href="reserve.css" />
+</head>
+
+<body>
+   <header>
+      <div class="header-container">
+         <div class="header-container__logo">
             <a href="../../../index.html"><img src="../../../assets/images/static/logo.svg" alt="logo" /></a>
-           </div>
+         </div>
 
-           <div class="header-container__nav">
-              <a href="../reserve/reserve.html">Бронирование</a>
-              <a href="../tournaments/tournaments.html">Турниры</a>
-              <a href="#">Новости</a>
-              <a href="../contacts/contacts.html">Контакты</a>
-           </div>
+         <div class="header-container__nav">
+            <a href="../reserve/reserve.html">Бронирование</a>
+            <a href="../tournaments/tournaments.html">Турниры</a>
+            <a href="#">Новости</a>
+            <a href="../contacts/contacts.html">Контакты</a>
+         </div>
 
-           <div class="header-container__buttons">
-              <a href="../auth/auth.html">Войти</a>
-              <a href="../register/register.html">Зарегистрироваться</a>
-           </div>
-        </div>
-     </header>
+         <div class="header-container__buttons">
+            <a href="../auth/auth.html">Войти</a>
+            <a href="../register/register.html">Зарегистрироваться</a>
+         </div>
+      </div>
+   </header>
 
-      <footer>
-         <div class="container">
-            <div class="footer-container__logo">
-                <a href="../../../index.html"><img src="../../../assets/images/static/logo.svg" alt="logo" /></a>
-            </div>
-
-            <div class="footer-container__nav">
-               <a href="#">Бронирование</a>
-               <a href="#">Турниры</a>
-               <a href="#">Новости</a>
-               <a href="#">Контакты</a>
+   <div class="reserve">
+      <h2>Бронирование игрового места</h2>
+      <div class="reserve-settings">
+         <img src="../../../assets/images/reserve/reserve-settings.png" alt="">
+         <div class="reserve-settings__format">
+            <h4>Формат</h4>
+            <div>
+               <img src="../../../assets/images/reserve/reserve-settings__format.png" alt="">
+               <p>Stream Место</p>
             </div>
          </div>
-      </footer>
-   </body>
+         <div class="reserve-settings__time">
+            <div>
+               <h4>Дата</h4>
+               <p>04.02 10:00</p>
+            </div>
+            <div>
+               <p>/</p>
+            </div>
+            <div>
+               <h4>Кол-во часов</h4>
+               <p>2:00</p>
+            </div>
+         </div>
+         <a href="#">
+            <img src="../../../assets/images/reserve/reserve-settings__download.png" alt="">
+            Забронировать
+         </a>
+      </div>
+
+      <div class="reserve-info">
+         <h4>Комплектующие</h4>
+         <div>
+            <div>
+               <div>
+                  <img src="../../../assets/images/reserve/11.svg" alt="">
+                  <p>Intel Core i7-13700K</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/12.svg" alt="">
+                  <p>NVIDIA GeForce RTX 4070 Ti</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/13.svg" alt="">
+                  <p>32 ГБ DDR5 5600 МГц</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/14.svg" alt="">
+                  <p>Samsung 980 Pro 2TB NVMe SSD</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/15.svg" alt="">
+                  <p>ASUS ROG Strix Z790-E Gaming WiFi</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/16.svg" alt="">
+                  <p>Corsair RM850x (850W, 80+ Gold)</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/17.svg" alt="">
+                  <p>NZXT Kraken X63 (240mm AIO)</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/18.svg" alt="">
+                  <p>Lian Li Lancool III</p>
+               </div>
+            </div>
+            <div>
+               <div>
+                  <img src="../../../assets/images/reserve/21.svg" alt="">
+                  <p>HyperX QuadCast</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/22.svg" alt="">
+                  <p>Logitech Brio 4K</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/23.svg" alt="">
+                  <p>SteelSeries Arctis Pro Wireless</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/24.svg" alt="">
+                  <p>Razer BlackWidow V4 Pro</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/25.svg" alt="">
+                  <p>Razer DeathAdder V3 Pro</p>
+               </div>
+               <div>
+                  <img src="../../../assets/images/reserve/26.svg" alt="">
+                  <p>AOC AGON AG274QXM (27", 1440p, 240 Гц)</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <footer>
+      <div class="container">
+         <div class="footer-container__logo">
+            <a href="../../../index.html"><img src="../../../assets/images/static/logo.svg" alt="logo" /></a>
+         </div>
+
+         <div class="footer-container__nav">
+            <a href="#">Бронирование</a>
+            <a href="#">Турниры</a>
+            <a href="#">Новости</a>
+            <a href="#">Контакты</a>
+         </div>
+      </div>
+   </footer>
+</body>
+
 </html>
