--- a/incl/pages/profile/profile.html
+++ b/incl/pages/profile/profile.html
@@ -3,10 +3,11 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Контакты</title>
+      <title>Турниры</title>
       <link rel="stylesheet" href="../../../assets/css/style.css" />
-      <link rel="stylesheet" href="contacts.css" />
+      <link rel="stylesheet" href="tournaments.css" />
    </head>
+
    <body>
       <header>
          <div class="header-container">
@@ -29,6 +30,12 @@
             </div>
          </div>
       </header>
+
+      <div class="profile">
+         <div class="container">
+            
+         </div>
+      </div>
 
       <footer>
          <div class="container">
