--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   Тактика, командная работа и точные коллы — только хладнокровие
                   и мастерство приведут вас к победе!
                </p>
-               <a href="#">Принять участие</a>
+               <a href="./incl/pages/tournament-page/tournament-page.html">Принять участие</a>
                <img src="./assets/images/home/events-schedule/1.png" alt="" />
             </div>
             <div class="events-schedule__small-cards">
@@ -108,7 +108,7 @@
                   <p>Командная</p>
                   <h4>Overwatch</h4>
                   <p>12 000₽</p>
-                  <a href="#">Регистрация</a>
+                  <a href="./incl/pages/tournament-page/tournament-page.html">Регистрация</a>
                   <img
                      src="./assets/images/home/events-schedule/2.png"
                      alt=""
@@ -118,7 +118,7 @@
                   <p>соло</p>
                   <h4>Fortnite</h4>
                   <p>5000₽</p>
-                  <a href="#">Регистрация</a>
+                  <a href="./incl/pages/tournament-page/tournament-page.html">Регистрация</a>
                   <img
                      src="./assets/images/home/events-schedule/3.png"
                      alt=""
