--- a/incl/pages/auth/auth.html
+++ b/incl/pages/auth/auth.html
@@ -8,30 +8,57 @@
       <link rel="stylesheet" href="auth.css" />
    </head>
    <body>
-    <header>
-        <div class="header-container">
-           <div class="header-container__logo">
-              <a href="../../../index.html"><img src="../../../assets/images/static/logo.svg" alt="logo" /></a>
-           </div>
+      <header>
+         <div class="header-container">
+            <div class="header-container__logo">
+               <a href="../../../index.html"
+                  ><img src="../../../assets/images/static/logo.svg" alt="logo"
+               /></a>
+            </div>
 
-           <div class="header-container__nav">
-              <a href="../reserve/reserve.html">Бронирование</a>
-              <a href="../tournaments/tournaments.html">Турниры</a>
-              <a href="#">Новости</a>
-              <a href="../contacts/contacts.html">Контакты</a>
-           </div>
+            <div class="header-container__nav">
+               <a href="../reserve/reserve.html">Бронирование</a>
+               <a href="../tournaments/tournaments.html">Турниры</a>
+               <a href="#">Новости</a>
+               <a href="../contacts/contacts.html">Контакты</a>
+            </div>
 
-           <div class="header-container__buttons">
-              <a href="../auth/auth.html">Войти</a>
-              <a href="../register/register.html">Зарегистрироваться</a>
-           </div>
-        </div>
-     </header>
+            <div class="header-container__buttons">
+               <a href="../auth/auth.html">Войти</a>
+               <a href="../register/register.html">Зарегистрироваться</a>
+            </div>
+         </div>
+      </header>
+
+      <div class="auth">
+         <div class="container">
+            <div class="auth-container">
+               <h2>Войти</h2>
+               <div>
+                  <p>Нет аккаунта?</p>
+                  <a href="#">Зарегистрироваться</a>
+               </div>
+               <input type="text" placeholder="email" />
+               <br />
+               <input type="password" placeholder="пароль" />
+               <div>
+                  <div>
+                     <input type="checkbox" name="rememberMe" id="rememberMe" />
+                     <label for="rememberMe">Запомнить меня</label>
+                  </div>
+                  <a href="#">Забыли пароль?</a>
+               </div>
+               <a href="../profile/profile.html">Войти</a>
+            </div>
+         </div>
+      </div>
 
       <footer>
          <div class="container">
             <div class="footer-container__logo">
-               <a href="../../../index.html"><img src="../../../assets/images/static/logo.svg" alt="logo" /></a>
+               <a href="../../../index.html"
+                  ><img src="../../../assets/images/static/logo.svg" alt="logo"
+               /></a>
             </div>
 
             <div class="footer-container__nav">
