--- a/incl/pages/profile/profile.html
+++ b/incl/pages/profile/profile.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Турниры</title>
       <link rel="stylesheet" href="../../../assets/css/style.css" />
-      <link rel="stylesheet" href="tournaments.css" />
+      <link rel="stylesheet" href="profile.css" />
    </head>
 
    <body>
@@ -33,7 +33,207 @@
 
       <div class="profile">
          <div class="container">
-            
+            <div class="profile-head">
+               <div class="profile-head__left">
+                  <img
+                     src="../../../assets/images/profile/profileImage.svg"
+                     alt=""
+                  />
+                  <div>
+                     <h2>аркадий</h2>
+                     <p><span>gamer+</span> подписка активна!</p>
+                  </div>
+               </div>
+               <div class="profile-head__right">
+                  <a href="#">Выйти</a>
+                  <a href="#">Изменить пароль</a>
+               </div>
+            </div>
+            <div class="profile-history">
+               <h4>История бронирований</h4>
+               <div class="profile-history__items">
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+                  <div class="profile-history__item">
+                     <div class="profile-history__item-date">
+                        <img
+                           src="../../../assets/images/profile/date.svg"
+                           alt=""
+                        />
+                        <p>22/12/24</p>
+                     </div>
+                     <div class="profile-history__item-time">
+                        <img
+                           src="../../../assets/images/profile/time.svg"
+                           alt=""
+                        />
+                        <p>2 часа 0 минут</p>
+                     </div>
+                     <div class="profile-history__item-map">
+                        <img
+                           src="../../../assets/images/profile/map.svg"
+                           alt=""
+                        />
+                        <p>ул. Бари Галеева, 3А</p>
+                     </div>
+                     <div class="profile-history__item-pc">
+                        <img
+                           src="../../../assets/images/profile/pc.svg"
+                           alt=""
+                        />
+                        <p>Vip Место</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
       </div>
 
