--- a/incl/pages/contacts/contacts.html
+++ b/incl/pages/contacts/contacts.html
@@ -30,6 +30,42 @@
          </div>
       </header>
 
+      <div class="contacts">
+         <div class="container">
+            <div class="contacts-container__name">
+               <p>клуб</p>
+               <h4>Gaming+</h4>
+            </div>
+            <div class="contacts-container__adress">
+               <p>адрес</p>
+               <a href="https://maps.app.goo.gl/d2kSLu33heB3mre78"
+                  >г. Казань ул. Бари Галеева, 3А</a
+               >
+            </div>
+            <div class="contacts-container__time">
+               <p>часы работы</p>
+               <h4>8:00 - 24:00</h4>
+            </div>
+            <div class="contacts-container__tel">
+               <p>телефон</p>
+               <a href="tel:+79179223391">+7 917 922 33 91</a>
+            </div>
+            <div class="contacts-container__email">
+               <p>E-mail</p>
+               <a href="mailto:gamingplus@gmail.com">gamingplus@gmail.com</a>
+            </div>
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4014.028968987388!2d49.179768866064364!3d55.8034608059103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415eb281ef8e4d65%3A0x5b12cc06fe4a5dfe!2z0JrQsNC30LDQvdGB0LrQuNC5INGC0LXRhdC90LjQutGD0Lwg0LjQvdGE0L7RgNC80LDRhtC40L7QvdC90YvRhSDRgtC10YXQvdC-0LvQvtCz0LjQuSDQuCDRgdCy0Y_Qt9C4!5e0!3m2!1sru!2sru!4v1739258146413!5m2!1sru!2sru"
+               width="600"
+               height="450"
+               style="border: 0"
+               allowfullscreen=""
+               loading="lazy"
+               referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+         </div>
+      </div>
+
       <footer>
          <div class="container">
             <div class="footer-container__logo">
