--- a/incl/pages/auth/auth.html
+++ b/incl/pages/auth/auth.html
@@ -36,7 +36,7 @@
                <h2>Войти</h2>
                <div>
                   <p>Нет аккаунта?</p>
-                  <a href="#">Зарегистрироваться</a>
+                  <a href="../register/register.html">Зарегистрироваться</a>
                </div>
                <input type="text" placeholder="email" />
                <br />
