--- a/incl/pages/register/register.html
+++ b/incl/pages/register/register.html
@@ -36,7 +36,7 @@
                <h2>Регистрация</h2>
                <div>
                   <p>Уже есть аккаунт?</p>
-                  <a href="#">Войти</a>
+                  <a href="../auth/auth.html">Войти</a>
                </div>
                <input type="text" placeholder="email" />
                <br />
