--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h2>Зарегистрируйте личный аккаунт чтобы получать бонусы!</h2>
             <form action="#">
                <input type="text" placeholder="Ваша почта" />
-               <input type="text" placeholder="Ваш пароль" />
+               <input type="password" placeholder="Ваш пароль" />
                <input type="submit" value="Зарегистрироваться" />
             </form>
             <p>
