--- a/incl/pages/profile/profile.html
+++ b/incl/pages/profile/profile.html
@@ -45,7 +45,7 @@
                   </div>
                </div>
                <div class="profile-head__right">
-                  <a href="#">Выйти</a>
+                  <a href="../auth/auth.html">Выйти</a>
                   <a href="#">Изменить пароль</a>
                </div>
             </div>
@@ -246,10 +246,10 @@
             </div>
 
             <div class="footer-container__nav">
-               <a href="#">Бронирование</a>
-               <a href="#">Турниры</a>
+               <a href="../reserve/reserve.html">Бронирование</a>
+               <a href="../tournaments/tournaments.html">Турниры</a>
                <a href="#">Новости</a>
-               <a href="#">Контакты</a>
+               <a href="../contacts/contacts.html">Контакты</a>
             </div>
          </div>
       </footer>
