--- a/incl/pages/register/register.html
+++ b/incl/pages/register/register.html
@@ -63,10 +63,10 @@
             </div>
 
             <div class="footer-container__nav">
-               <a href="#">Бронирование</a>
-               <a href="#">Турниры</a>
+               <a href="../reserve/reserve.html">Бронирование</a>
+               <a href="../tournaments/tournaments.html">Турниры</a>
                <a href="#">Новости</a>
-               <a href="#">Контакты</a>
+               <a href="../contacts/contacts.html">Контакты</a>
             </div>
          </div>
       </footer>
