--- a/incl/pages/reserve/reserve.html
+++ b/incl/pages/reserve/reserve.html
@@ -45,25 +45,33 @@
                      src="../../../assets/images/reserve/reserve-settings__format.png"
                      alt=""
                   />
-                  <p>Stream Место</p>
-                  <!-- <select>
+                  <select class="format-select">
                      <option>Stream Место</option>
                      <option>Standart Место</option>
                      <option>VIP Место</option>
-                   </select> -->
+                   </select>
                </div>
             </div>
             <div class="reserve-settings__time">
                <div>
                   <h4>Дата</h4>
-                  <p>04.02 10:00</p>
+                  <select class="date-select">
+                     <option>04.02 10:00</option>
+                     <option>05.02 11:00</option>
+                     <option>06.02 12:00</option>
+                  </select>
                </div>
                <div>
                   <p>/</p>
                </div>
                <div>
                   <h4>Кол-во часов</h4>
-                  <p>2:00</p>
+                  <select class="hours-select">
+                     <option>2:00</option>
+                     <option>3:00</option>
+                     <option>4:00</option>
+                     <option>5:00</option>
+                  </select>
                </div>
             </div>
             <a href="#">
@@ -151,10 +159,10 @@
             </div>
 
             <div class="footer-container__nav">
-               <a href="#">Бронирование</a>
-               <a href="#">Турниры</a>
+               <a href="../reserve/reserve.html">Бронирование</a>
+               <a href="../tournaments/tournaments.html">Турниры</a>
                <a href="#">Новости</a>
-               <a href="#">Контакты</a>
+               <a href="../contacts/contacts.html">Контакты</a>
             </div>
          </div>
       </footer>
